syntax = "proto3";

package student;

option go_package = ".;studentpb";

message student {
    string id = 1;
    string name = 2;
    int32 age = 3;
}

message GetStudentRequest {
    string id = 1;
}

message SetStudentResponse {
    string id = 1;
}

service StudentService {
    rpc GetStudent(GetStudentRequest) returns (student);
    rpc SetStudent(student) returns (SetStudentResponse);
}